--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       eg:  Kitten Match Game
   -->
 
-  <title>CK's Browser Pairs &mdash;  My First Mobile Game</title>
+  <title>Kevin's Browser Pairs &mdash;  My First Mobile Game</title>
 
   <!-- 
       Task 2:
@@ -63,7 +63,7 @@
 
       Go check your game (refresh the page). See a difference?
   -->
-  <link href='http://fonts.googleapis.com/css?family=Days+One' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Stint+Ultra+Expanded' rel='stylesheet' type='text/css'>
 
 </head>
 
@@ -141,7 +141,7 @@
 </audio>
 <audio class="sound">
    <source src="sound/match.ogg" type="audio/ogg; codecs=vorbis" />
-   <source src="sound/match.mp3" type="audio/mpeg" />
+   <source src="sound/ruler_twang.mp3" type="audio/mpeg" />
 </audio>
 <audio class="sound">
    <source src="sound/applause.ogg" type="audio/ogg; codecs=vorbis" />
